session-12-ingress-configmaps-secrets/homework/configmap-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
    - name: app-container
      image: nginx:alpine
