session-12-ingress-configmaps-secrets/homework/secret-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo-pod
spec:
  containers:
    - name: app-container
      image: nginx:alpine
